Alterando título todo para maiúsculo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CURSOS da Alura</title>
+    <title>CURSOS DA ALURA</title>
 </head>
 <body>
     
